--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">LoLTips</string>
+    <string name="get_varus_button_text">Get Varus</string>
 </resources>
